Fix vr-legend layout issue
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43946

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -3569,9 +3569,11 @@ vr-toolbox[large] .item{
     text-decoration: none;
     font-size: 12px;
     cursor:pointer;
+    padding-bottom:10px;
 }
 .main-content{
     display:none;
+    background-color:#fff;
     border-radius: 4px;
     border: 1px solid rgb(204, 204, 204);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
